--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -24,7 +24,7 @@
 
             displayName: 'Build with maven'
 
-          - script: java -jar target/MyMavenApp-1.0-SNAPSHOT.jar
+          - script: java -jar target/maven55-1.0-SNAPSHOT.jar
 
 
             displayName: 'Running jar'
